--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Random Password Generator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/6bfa854a4c.js" crossorigin="anonymous"></script>
 </head>
