Connected index.html to new JS script location

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Random Password Generator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/6bfa854a4c.js" crossorigin="anonymous"></script>
+    <script src="js/main.js" defer></script>
 </head>
+
 <body>
     <div class="container">
         <div class="card">
@@ -33,7 +36,6 @@
 
         <div class="toast" id="toast">The password has been copied.</div>
     </div>
-
-    <script src="main.js"></script>
 </body>
+
 </html>
