Refactored the index.html page and added a new scss stylesheet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Random Password Generator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <script src="https://kit.fontawesome.com/6bfa854a4c.js" crossorigin="anonymous"></script>
     <script src="js/main.js" defer></script>
 </head>
@@ -15,19 +15,35 @@
             <div class="card-head">
                 <h2>Generate Secure Password</h2>
             </div>
+
             <div class="card-body">
                 <div class="area-result">
-                    <button id="actionbutton" class="cta"><span class="fas fa-redo-alt"></span></button>
-                    <button id="copybutton"><span class="far fa-clone"></span></button>
+                    <button id="actionbutton" class="cta">
+                        <span class="fas fa-redo-alt"></span>
+                    </button>
+                    <button id="copybutton">
+                        <span class="far fa-clone"></span>
+                    </button>
+
                     <div class="result" id="result">&nbsp;</div>
+
                     <input type="text" class="copytext" id="copytext">
                 </div>
+
                 <div class="area-options">
-                    <label for="lowercase"><input type="checkbox" id="lowercase" checked> Lowercase</label>
-                    <label for="uppercase"><input type="checkbox" id="uppercase" checked> Uppercase</label>
-                    <label for="numbers"><input type="checkbox" id="numbers" checked> Numbers</label>
-                    <label for="punctuation"><input type="checkbox" id="punctuation" checked> Pucntuation</label>
+                    <label for="lowercase">Lowercase</label>
+                    <input type="checkbox" id="lowercase" checked>
+
+                    <label for="uppercase">Uppercase</label>
+                    <input type="checkbox" id="uppercase" checked>
+
+                    <label for="numbers">Numbers</label>
+                    <input type="checkbox" id="numbers" checked>
+
+                    <label for="punctuation">Pucntuation</label>
+                    <input type="checkbox" id="punctuation" checked>
                 </div>
+
                 <div class="area-length">
                     <label for="length">Length: <input type="number" id="length" value="20"></label>
                 </div>
